# polyhedge

./: .env.example  .gitignore  README.md  hackathon_submission.md  pyproject.toml
polyhedge/: __init__.py  config.py  logger.py  main.py
polyhedge/api/: main.py
polyhedge/api/routers/: admin.py  hedge.py  markets.py
polyhedge/api/schemas/: request.py  response.py
polyhedge/api/services/: hedge_service.py
polyhedge/models/: __init__.py  financial_metrics.py  hedge.py  market.py  risk.py
polyhedge/services/: __init__.py  bundle_generator.py  cache.py  cerebras_filter.py  concern_search.py  context_compressor.py  context_gatherer.py  financial_metrics.py  market_search.py  relevance_scorer.py  risk_analyzer.py  vector_db.py  web_search.py
web/: .gitignore  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/results/: page.tsx
web/src/components/: BundleViewer.tsx  ChatInterface.tsx  FinancialMetrics.tsx  MarketCard.tsx  PriceChart.tsx  ProgressTracker.tsx
web/src/lib/: api.ts  metrics.ts  types.ts
web/src/styles/: globals.css
