[project]
name = "polyhedge"
version = "0.1.0"
description = "IRL Insurance via Polymarket - hedge real-life risks with prediction markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
polyhedge = "polyhedge.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
